--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.2",
     "next": "15.0.0",
+    "next-sitemap": "^4.2.3",
     "nodemon": "^3.1.7",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
